# PrepSense

./: .cache_ggshield  .claude  .claude-config  .env.template  .envrc  .flake8  .gitguardian.yml  .gitignore  .health_check_results.json  .mcp.json  .pre-commit-config.yaml  .quality-gates.yml  .replit  .spectral.yml  =3.4.0  CLAUDE.md  CLAUDE.md.backup  CLAUDE_COLLABORATION_GUIDE.md  CLAUDE_INSTANCE_ROLES.md  COMPREHENSIVE_TEST_PLAN.md  CREWAI_AGENT_IMPLEMENTATION_PLAN.md  CREWAI_AGENT_IMPLEMENTATION_PLAN_REFINED.md  CREWAI_IMPLEMENTATION_SUMMARY.md  CREWAI_MONITORING_IMPLEMENTATION_SUMMARY.md  CREWAI_VERIFICATION_PLAN.md  DEMO_TEST_GUIDE.md  DEVELOPER_GUIDE.md  DEVELOPMENT_TOOLS_GUIDE.md  FIRECRAWL_INTEGRATION_RESULTS.md  GIT_AUTHOR_SETUP.md  Guide_v1.0.md  IMPLEMENTATION_SUMMARY.md  Key_Loader_7.py  LAUNCHER_README.md  LICENSE_HEADER  MCP_GLOBAL_ANNOUNCEMENT.md  MIGRATE_TO_ADC.md  MONITORING_IMPLEMENTATION_SUMMARY.md  MY_PANTRY_RECIPE_FLOW.md  PERFORMANCE_IMPROVEMENTS_SUMMARY.md  (+131 more)
.claude/: VERIFICATION_PROTOCOL.md  fix_worktree_symlinks.sh  settings.json  settings.local.json
.githooks/: post-merge  pre-push  prepare-commit-msg
.github/: pull_request_template.md
App Features Reference/: Recipe_Recommendation_System.md
Database Scripts/: README.md  import_usda_data.py  import_usda_unit_mappings.py  populate_embeddings.py
External Revision/: CHANGELOG.md  CLAUDE.md  FEATURE_DOCUMENTATION.md  QUICK_COMPLETE_IMPLEMENTATION_SUMMARY.md  VERIFICATION_REMINDER.md
Sunday Meeting/: .env.template  SUNDAY_MEETING_APP_SETUP.md  TEMPLATE ENV
backend-gateway/: app.py  models.py
backend_gateway/: .env.template  .gitignore  CLAUDE.md  CLEANUP_SUMMARY.md  CREWAI_IMPLEMENTATION_ROADMAP.md  CREWAI_TESTS_COMPLETE_SUMMARY.md  CREWAI_TEST_RESULTS.md  CREWAI_TEST_SUMMARY.md  DATABASE_MIGRATION_GUIDE.md  IAM_SETUP_GUIDE.md  INGREDIENT_MATCHING_TEST_PLAN.md  MAIN_UPDATES_SUMMARY.md  MULTI_AGENT_IMPLEMENTATION_GUIDE.md  MULTI_AGENT_README.md  PREPSENSE_EXPERT_AGENTS_DESIGN.md  RemoteControl_7.py  SECURITY_NOTICE.md  TEST_IMPLEMENTATION_GUIDE.md  TEST_SUMMARY.md  __init__.py  app.py  app.py.backup  app_chat_only.py  database.py  debug_recipe_data.py  duplicate_user_data.py  locustfile.py  main.py  models.py  openapi.json  pubsub.py  pytest.ini  requirements-dev.txt  requirements.txt  response.json  run_all_crew_ai_tests.py  run_all_crew_tests.py  run_all_tests.sh  run_basic_tests.py  run_crew_ai_tests.py  (+6 more)
bigquery/: README.md  user_recipes_router_old.py  user_recipes_service_old.py
cache/: current_inventory.json  expiring_items.json  user_preferences.pkl
db/: README.md  apply_migration_direct.py  import_usda_portions.py  inspect_database_schema.py  inspect_usda_data.py  run_migration.py  sample_validation_queries.sql  simple_usda_fixes.py  usda_analysis_20250804_084552.json  usda_analysis_20250804_085133.json  usda_database_analysis.py  usda_database_remediation.py  usda_database_remediation_complete.py  usda_database_remediation_final.py  usda_database_remediation_fixed.py  usda_database_validation_checklist.py  usda_dba_report.md  usda_detailed_analysis.py  usda_detailed_analysis_20250804_084751.json  usda_validation_corrected.py  validation_summary.py
docs/: .env.template  2025-01-19-cleanup-summary.md  2025-01-19-session-summary.md  2025-01-20-crewai-tdd-implementation-summary.md  2025-01-24-semantic-search-implementation.md  2025-01-24-semantic-search-results.md  2025-01-24-warning-suppression.md  2025-01-25-recipe-completion-enhancements.md  2025-01-25-supply-chain-impact-integration.md  2025-01-26-usda-unit-mapping-implementation.md  2025-01-27-all-crewai-agents.md  2025-01-27-crewai-integration.md  2025-01-27-unit-validation-crewai.md  2025-07-31-claude-hooks-fix.md  5.1_Spoonacular_API_ANALYSIS.md  5.2 Local Storage and Caching Strategy.md  5.2_Local_Storage_and_Caching_Strategy.md  BACKEND_SETUP_GUIDE.md  CHANGELOG.md  CHAT_SYSTEM_FIX_PLAN.md  CHAT_SYSTEM_IMPLEMENTATION_PROGRESS.md  COMPREHENSIVE_CI_CD_SETUP_GUIDE.md  COOKING_MODE_COMPLETION_IMPROVEMENTS.md  CREWAI_FOUNDATION_DOCUMENTATION.md  DISCOVER_TAB_ANALYSIS_AND_TEST_PLAN.md  DYNAMIC_CONFIGURATION_GUIDE.md  Doc_Backup_Recipe_System.md  Doc_FastApi_Routers.md  Doc_FrontEnd_iOS.md  Doc_GCP.md  Doc_Research.md  Doc_Start_Here.md  ENHANCED_AI_RECIPE_PROMPT.md  FOOD_CATEGORIZATION_SYSTEM.md  GITIGNORE_RECOMMENDATIONS.md  IMPLEMENTATION_PLAN_INGREDIENT_SUBTRACTION.md  (+41 more)
~/: .zshrc
(+992 files in other folders)
